--- a/src/assets/apps/bootstrap/css/dashboard.css
+++ b/src/assets/apps/bootstrap/css/dashboard.css
@@ -95,3 +95,18 @@ body {
     min-height: 56px; 
     background-color: #000000;
   }
+
+  .color-filter{
+    filter: invert(48%) sepia(13%) saturate(3207%) hue-rotate(130deg) brightness(95%) contrast(80%);
+  }
+
+  .title{
+    height:30px; background:black; color:white
+  }
+
+  @media (max-width: 768px) {
+      .mobile-column{
+          display: flex;
+          flex-direction: column;
+      }
+  }
