--- a/src/assets/apps/bootstrap/css/dashboard.css
+++ b/src/assets/apps/bootstrap/css/dashboard.css
@@ -16,7 +16,6 @@ p {
 a,
 a:hover,
 a:focus {
-    color: inherit;
     text-decoration: none;
     transition: all 0.3s;
 }
@@ -26,7 +25,6 @@ a:focus {
     background: #363636;
     border: none;
     border-radius: 0;
-    /* margin-bottom: 30px; */
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
 }
 
@@ -114,12 +112,16 @@ span {
 }
 
 #sidebar .sidebar-header {
-    padding: 15px 0;
+    padding: 15px 16px;
     text-align: center;
     background: #363636;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+}
+
+.active .sidebar-header{
+    justify-content: center!important;
 }
 
 #sidebar .sidebar-header strong {
@@ -132,7 +134,6 @@ span {
 }
 
 #sidebar ul li a {
-    padding: 10px;
     font-size: 1.1em;
     display: block;
 }
@@ -165,7 +166,6 @@ a[data-toggle="collapse"] {
 
 ul ul a {
     font-size: 0.9em !important;
-    padding-left: 30px !important;
     background: #0275d8;
 }
 
@@ -206,14 +206,13 @@ a.article:hover {
     transition: all 0.3s;
 }
 
-#sidebarCollapse1, #sidebarCollapse2 {
-    background: white;
-    border: none;
-}
-
 .logo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 30px;
     margin-right: 12px;
+    color: white;
 }
 
 .mobile-logo{
@@ -221,19 +220,17 @@ a.article:hover {
     margin:unset;
 }
 
-.active #sidebarCollapse2{
+.active #sidebar-collapse-mobile{
     display: none;
 }
 
-.title-desktop{
-    /* margin-left: 20px; */
+.title-desktop, .title-desktop a{
     color: white;
 }
 
 .title-mobile{
     color: white;
     height: 32px;
-    /* display: flex; */
     align-items: center;
     justify-content: center;
     border-top: 1px solid #5d5d5d;
@@ -245,7 +242,6 @@ a.article:hover {
 }
 
 .bread {
-    /* padding: 15px 20px 5px 20px; */
     border-bottom: 1px solid #ccc;
     margin-bottom: 25px;
 }
@@ -287,10 +283,6 @@ a.article:hover {
 
     #sidebar .sidebar-header strong {
         display: block;
-    }
-
-    #sidebar ul li a {
-        padding: 20px 10px;
     }
 
     #sidebar ul li a i {
