feat: closed menu style

--- a/src/assets/apps/bootstrap/css/dashboard.css
+++ b/src/assets/apps/bootstrap/css/dashboard.css
@@ -61,12 +61,20 @@ span {
     SIDEBAR STYLE
 ----------------------------------------------------- */
 
+.active ul[closed-display-style="closed-only-icon"] span {
+    display: none!important;
+}
+.active ul[closed-display-style="closed-only-text"] i {
+    display: none!important;
+}
+
 .wrapper {
     display: flex;
     align-items: stretch;
 }
 
 #sidebar {
+    z-index: 1;
     min-width: 250px;
     max-width: 250px;
     background: #363636;
@@ -86,7 +94,6 @@ span {
 
 #sidebar.active .sidebar-header h3,
 #sidebar.active .CTAs,
-#sidebar.active .nav-item span,
 #sidebar.active .logo {
     display: none;
 }
@@ -113,7 +120,7 @@ span {
 }
 
 #sidebar.active ul ul a {
-    padding: 10px 0 !important;
+    padding: 15px 0 !important;
 }
 
 #sidebar.active .dropdown-toggle::after {
@@ -147,14 +154,19 @@ span {
     padding: 20px 0;
 }
 
-#sidebar ul li a {
+#sidebar ul li > a {
     font-size: 1.1em;
     display: block;
+    /* color: white; */
 }
 
-#sidebar ul li a:hover {
-    color: #7386d5;
+#sidebar ul li > a:hover {
+    /* color: #0275d8;
+    background: #fff; */
+    background-color: #0275d8;
+    /* color: #fff; */
 }
+
 
 #sidebar ul li a i {
     margin-right: 10px;
@@ -206,8 +218,19 @@ a.article:hover {
     color: #fff !important;
 }
 
-.nav.navbar-nav.ml-auto a {
+.nav.navbar-nav.ml-auto a
+{
     padding: 8px 17px 8px 17px !important;
+}
+
+.nav.navbar-nav.ml-auto a:hover{
+    background: #0275d8;
+    color: #fff;
+}
+
+.dropdown-toggle.nav-link
+{
+    color: white!important;
 }
 
 /* ---------------------------------------------------
