--- a/src/assets/apps/bootstrap/css/dashboard.css
+++ b/src/assets/apps/bootstrap/css/dashboard.css
@@ -1,21 +1,10 @@
-@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
-
-.test{
-    background-color: unset;
-    color: white;
-    line-height: 36px;
-    border: unset;
-}
+/* @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700"; */
 
 body {
-    font-family: "Poppins", sans-serif;
     background: #fafafa;
 }
 
 p {
-    font-family: "Poppins", sans-serif;
-    font-size: 1.1em;
-    font-weight: 300;
     line-height: 1.7em;
     color: #999;
 }
@@ -130,13 +119,11 @@ span {
 #sidebar.active ul li a {
     padding: 20px 10px;
     text-align: center;
-    font-size: 0.85em;
 }
 
 #sidebar.active ul li a i {
     margin-right: 0;
     display: block;
-    font-size: 1.8em;
     margin-bottom: 5px;
 }
 
@@ -168,7 +155,6 @@ span {
 
 #sidebar .sidebar-header strong {
     display: none;
-    font-size: 1.8em;
 }
 
 #sidebar ul.components {
@@ -176,7 +162,6 @@ span {
 }
 
 #sidebar ul li > a {
-    font-size: 1.1em;
     display: block;
 }
 
@@ -208,7 +193,6 @@ a[data-toggle="collapse"] {
 }
 
 ul ul a {
-    font-size: 0.9em !important;
     background: #0275d8;
 }
 
@@ -218,7 +202,6 @@ ul.CTAs {
 
 ul.CTAs a {
     text-align: center;
-    font-size: 0.9em !important;
     display: block;
     border-radius: 5px;
     margin-bottom: 5px;
@@ -367,7 +350,6 @@ a.article:hover {
     }
 
     #sidebar ul li a i {
-        font-size: 1.3em;
     }
 
     #sidebar {
