--- a/src/assets/apps/custom/css/site.css
+++ b/src/assets/apps/custom/css/site.css
@@ -1,185 +1,532 @@
 html,
 body {
-    height: 100%;
+  height: 100%;
+  font-size: small;
+}
+
+.btn {
+  justify-content: center;
+  align-items: center;
+  background: white;
+}
+
+#sidebar .btn {
+  display: flex;
+}
+
+.bg-dark .nav-link.active {
+  background-color: #f5f5f5 !important;
+  color: #28a745 !important;
+}
+
+.bg-dark.nav-link.active:hover {
+  background-color: #f5f5f5 !important;
+  color: #28a745 !important;
+}
+
+.nav-link.active i.fa {
+  color: #28a745 !important;
+}
+.breadcrumb {
+  color: black !important;
+}
+
+#sidebar ul li > a.nav-link.active {
+  border-color: #28a745 !important; /* Etkin bağlantının kenarlığını kırmızıya çevir */
+}
+
+.form-check-input:checked {
+  background-color: #28a745;
+  border-color: #28a745;
+}
+
+.grid-view a.btn-info {
+  color: #4169e1 !important;
+}
+
+.grid-view a.btn-info:hover {
+  color: #4169e1 !important;
+  background: #f4f4f4 !important;
+}
+
+.btn-primary {
+  background: transparent;
+  color: black;
+  border: solid black 1px !important;
+}
+
+.grid-view a.btn-primary {
+  color: #4682b4 !important;
+  border: solid #4682b4 1px !important;
+}
+
+.grid-view a.btn-primary:hover {
+  color: #4682b4 !important;
+  border: solid #4682b4 1px !important;
+  background: #f4f4f4 !important;
+}
+.actions a.btn-primary:hover {
+  background: #f4f4f4 !important;
+}
+.grid-view a.btn-warning {
+  color: black !important;
+  border: solid black 1px !important;
+}
+
+.grid-view a.bbtn-warning:hover {
+  color: black !important;
+  border: solid black 1px !important;
+}
+
+.dd-handle button.btn-warning {
+  color: #4169e1;
+  border: solid #4169e1 1px !important;
+}
+
+.dd-handle button.btn-warning:hover {
+  color: 4169e1;
+  border: solid #4169e1 1px !important;
+  height: 22px;
+}
+
+.actions button.fa-expand:hover {
+  background: #f4f4f4 !important;
+}
+.actions button.fa-compress:hover {
+  background: #f4f4f4 !important;
+}
+
+.actions button.btn-primary:hover {
+  background: #f4f4f4 !important;
+}
+
+.fa-arrow-circle-right:before {
+  color: #4169e1;
+}
+
+/* dev-suit*/
+
+.breadcrumb-item::before {
+  color: black !important;
+}
+
+.breadcrumb-item.active {
+  color: black !important;
+}
+
+.btn:hover {
+  background: #f4f4f4 !important; /* Hover durumda arkaplan rengi */
+  color: black !important; /* Hover durumda metin rengi */
+}
+.btn-success {
+  background: transparent;
+  color: green;
+  border: solid green 1px;
+  /* margin-right: 5px; */
+  background: ghostwhite !important;
+}
+.btn-success:hover {
+  background: #f4f4f4 !important; /* Hover durumda arkaplan rengi */
+  color: green !important; /* Hover durumda metin rengi */
+  border: solid green 1px; /* Hover durumda kenar rengi */
+}
+.fa-arrow-right {
+  color: green;
+}
+
+.table-striped.btn-warning {
+  border: black !important;
+}
+
+.fa-align-justify {
+  color: black !important;
+}
+
+.btn-warning {
+  background: transparent;
+  color: #ffc107;
+  /* margin-right: 5px; */
+  background: ghostwhite !important;
+  border: solid #ffc107 1px !important;
+}
+.btn-warning:hover {
+  background: #f4f4f4 !important; /* Hover durumda arkaplan rengi ghostwhite */
+  color: #ffc107 !important; /* Hover durumda metin rengi siyah */
+  border: solid #ffc107 1px !important; /* Hover durumda çerçeve rengi turuncu */
+}
+.dropdown-menu.show .dropdown-item.active {
+  background-color: #dcdcdc !important;
+}
+
+.dropdown-menu[data-bs-popper] {
+  right: 0;
+  left: auto;
+}
+
+.btn:hover {
+  background-color: #f4f4f4 !important;
+  color: black;
+}
+
+.btn-info {
+  background: transparent;
+  border: solid 1px !important;
+  color: #17a2b8 !important;
+}
+.btn-info:hover {
+  background: #f4f4f4 !important;
+  color: black !important;
+}
+
+.btn-danger {
+  background: transparent;
+  color: red !important;
+  border: solid red 1px !important;
+}
+.btn-danger:hover {
+  background: #f4f4f4 !important; /* Hover durumda arkaplan rengi ghostwhite */
+  color: red !important; /* Hover durumda metin rengi siyah */
+  border: solid red 1px !important; /* Hover durumda çerçeve rengi turuncu */
+}
+.table a {
+  color: black;
+}
+
+.dd-handle .btn-primary {
+  border: 1px solid #1b8bb4 !important;
+}
+.dd-handle .btn-warning {
+  border: 1px solid black !important;
+}
+.btn-danger.fa-times {
+  color: red, i !important;
+}
+.fa-arrows:before {
+  content: "\f047";
+  color: red;
+}
+.dd-handle.fa-arrows:hover {
+  background: #f4f4f4 !important;
+  color: black !important;
+}
+.fa-arrow-left:before {
+  color: red;
+}
+
+.fa-edit:before,
+.fa-pencil-square-o:before {
+  content: "\f044";
+  color: #1b8bb4 !important;
+}
+.dd-handle:hover {
+  color: black !important;
+}
+.nav-link {
+  color: black !important;
+}
+.nav-link:hover {
+  color: black !important;
+  background-color: #f4f4f4;
+}
+
+.nav-pills {
+  /* margin-right: 0.9rem !important;
+  margin-left: 0.5rem !important; */
+  padding: 10px 14.3px;
+}
+#sidebar .me-lg-0 {
+  margin-top: 0.5rem;
+  border-top: 2;
+}
+.dropdown-toggle.nav-link {
+  color: #082b36 !important;
 }
 
 .wrap {
-    min-height: 100%;
-    height: auto;
-    margin: 0 auto -60px;
-    padding: 0 0 60px;
+  min-height: 100%;
+  height: auto;
+  margin: 0 auto -60px;
+  padding: 0 0 60px;
 }
 
 .wrap > .container {
-    padding: 70px 15px 20px;
+  padding: 70px 15px 20px;
 }
 
 .footer {
-    height: 60px;
-    background-color: #f5f5f5;
-    border-top: 1px solid #ddd;
-    padding-top: 20px;
+  height: 60px;
+  background-color: #f5f5f5;
+  border-top: 1px solid #ddd;
+  padding-top: 20px;
 }
 
 .jumbotron {
-    text-align: center;
-    background-color: transparent;
+  text-align: center;
+  background-color: transparent;
 }
 
 .jumbotron .btn {
-    font-size: 21px;
-    padding: 14px 24px;
+  font-size: 21px;
+  padding: 14px 24px;
 }
 
 .not-set {
-    color: #c55;
-    font-style: italic;
+  color: #c55;
+  font-style: italic;
 }
 
 /* add sorting icons to gridview sort links */
-a.asc:after, a.desc:after {
-    position: relative;
-    top: 1px;
-    display: inline-block;
-    font-family: 'Glyphicons Halflings';
-    font-style: normal;
-    font-weight: normal;
-    line-height: 1;
-    padding-left: 5px;
+a.asc:after,
+a.desc:after {
+  position: relative;
+  top: 1px;
+  display: inline-block;
+  font-family: "Glyphicons Halflings";
+  font-style: normal;
+  font-weight: normal;
+  line-height: 1;
+  padding-left: 5px;
 }
 
 a.asc:after {
-    content: "\e151";
+  content: "\e151";
 }
 
 a.desc:after {
-    content: "\e152";
+  content: "\e152";
 }
 
 .sort-numerical a.asc:after {
-    content: "\e153";
+  content: "\e153";
 }
 
 .sort-numerical a.desc:after {
-    content: "\e154";
+  content: "\e154";
 }
 
 .sort-ordinal a.asc:after {
-    content: "\e155";
+  content: "\e155";
 }
 
 .sort-ordinal a.desc:after {
-    content: "\e156";
+  content: "\e156";
 }
 
 .grid-view td {
-    white-space: nowrap;
+  white-space: nowrap;
 }
 
 .grid-view .filters input,
 .grid-view .filters select {
-    min-width: 50px;
+  min-width: 50px;
 }
 
 .hint-block {
-    display: block;
-    margin-top: 5px;
-    color: #999;
+  display: block;
+  margin-top: 5px;
+  color: #999;
+}
+
+.dropdown-item.active,
+.dropdown-item:active {
+  color: black var(--bs-dropdown-link-active-color) !important;
+  text-decoration: none !important;
+  background-color: #f3f3f3 !important;
 }
 
 .error-summary {
-    color: #a94442;
-    background: #fdf7f7;
-    border-left: 3px solid #eed3d7;
-    padding: 10px 20px;
-    margin: 0 0 15px 0;
+  color: #a94442;
+  background: #fdf7f7;
+  border-left: 3px solid #eed3d7;
+  padding: 10px 20px;
+  margin: 0 0 15px 0;
 }
 
 /* align the logout "link" (button in form) of the navbar */
 .nav li > form > button.logout {
-    padding: 15px;
-    border: none;
+  padding: 15px;
+  border: none;
 }
 
-@media(max-width:767px) {
-    .nav li > form > button.logout {
-        display:block;
-        text-align: left;
-        width: 100%;
-        padding: 10px 15px;
-    }
+@media (max-width: 767px) {
+  .nav li > form > button.logout {
+    display: block;
+    text-align: left;
+    width: 100%;
+    padding: 10px 15px;
+  }
 }
 
 .nav > li > form > button.logout:focus,
 .nav > li > form > button.logout:hover {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .nav > li > form > button.logout:focus {
-    outline: none;
+  outline: none;
+}
+
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  display: none;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background-color: #2196f3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196f3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+.nav-link {
+  color: black;
+}
+
+.page-link.active,
+.active > .page-link {
+  background-color: #7ed957 !important;
+  border-color: #7ed957 !important;
+  color: white !important;
+}
+.page-link {
+  color: black !important;
+}
+
+.col-form-label {
+  font-size: inherit;
+}
+
+.form-select {
+  font-size: inherit;
+}
+
+.form-control {
+  font-size: inherit;
+}
+
+.card-title {
+  font-size: medium;
+}
+
+.card-header {
+  font-size: medium;
+}
+
+.fa {
+  font-size: inherit;
+}
+
+.tab-sideways .nav-link .nav-link-text {
+  width: 7rem !important;
+  height: 7rem !important;
+  font-size: inherit !important;
+}
+
+.tab-sideways .nav-link {
+  min-height: 9rem !important;
+}
+
+.panel-heading > .panel-title > .actions > .btn {
+  --bs-btn-padding-x: 0.6rem;
+  --bs-btn-padding-y: 8px;
+}
+
+.panel-title {
+  margin-top: 0;
+  margin-bottom: 0;
+  color: inherit;
+}
+
+.panel-title .actions {
+  font-size: 13px;
 }
 
 
- /* The switch - the box around the slider */
- .switch {
-    position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 34px;
-  }
-  
-  /* Hide default HTML checkbox */
-  .switch input {display:none;}
-  
-  /* The slider */
-  .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  input:checked + .slider {
-    background-color: #2196F3;
-  }
-  
-  input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
-  }
-  
-  input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
-  }
-  
-  /* Rounded sliders */
-  .slider.round {
-    border-radius: 34px;
-  }
-  
-  .slider.round:before {
-    border-radius: 50%;
-  }
 
-  .nav-link {
-    color: #fff;
-  }
-  
+.bread > nav {
+  margin-left: 5px;
+}
+
+.panel-title button:has(img),
+.panel-title a:has(img) {
+  font-size: 10px;
+  /* display: flex; */
+}
+
+.panel-title button img,
+.panel-title a img {
+  width: 18px;
+}
+
+.modal-dialog .col-sm-10 {
+  margin-left: 0px;
+}
+
+.modal-dialog .modal-content .modal-header h5 {
+  margin-left: 12px;
+}
+
+.form-group {
+  width: 100%;
+}
+
+.grid-view .panel-footer {
+  padding: 10px 0px;
+  margin-left: -7px;
+  margin-right: -7px;
+}
+
+.panel-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
